# replicate-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml  tests.yml
examples/: replicate.rs
src/: api_definitions.rs  client.rs  collection.rs  config.rs  errors.rs  lib.rs  model.rs  prediction.rs  prediction_client.rs  retry.rs  training.rs  version.rs
src/enums/: PredictionSource.rs  PredictionStatus.rs  RetryStrategy.rs  WebhookEvents.rs  mod.rs
src/libs/: PredictionClient.rs  Retry.rs  mod.rs
src/structs/: Collection.rs  CreatePrediction.rs  CreateTraining.rs  CreateTrainingPayload.rs  GetCollectionModels.rs  GetModel.rs  GetModelVersion.rs  GetPrediction.rs  GetTraining.rs  ListCollectionModels.rs  ListModelVersions.rs  ListPredictions.rs  ListTrainings.rs  Model.rs  Prediction.rs  PredictionClient.rs  PredictionPayload.rs  PredictionsUrls.rs  RetryPolicy.rs  Training.rs  TrainingOptions.rs  Version.rs  mod.rs
src/utils/: Prediction.rs  mod.rs
