[package]
name = "replicate-rust"
description = "An Unofficial Rust Client for Replicate."
version = "0.0.3"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shubhamai/replicate-rust/"
authors = ["Shubhamai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["json", "blocking"]}
serde = {version = "1.0.186", features = ["derive"]}
serde_json = "1.0.105"

[dev-dependencies]
httpmock = "0.6"